--- a/overlay_penguin_portrait_futuristic.html
+++ b/overlay_penguin_portrait_futuristic.html
@@ -18,78 +18,65 @@ html,body{
 }
 .wrap{
   width:100%; height:100%;
-  aspect-ratio:9/16; max-width:360px;
-  margin:auto; position:relative;
-  background:transparent; overflow:hidden;
+  aspect-ratio:9/16;
+  max-width:360px; margin:auto;
+  position:relative;
+  background:transparent;
+  overflow:hidden;
   pointer-events:none;
 }
 
-/* Game frame */
-.game-frame{
-  position:absolute; top:10%; left:50%;
+/* SOCIAL (atas) */
+.topbar{
+  position:absolute; top:20px; left:50%;
   transform:translateX(-50%);
-  width:88%; height:50%;
+  padding:6px 12px; min-width:180px; max-width:300px;
+  border-radius:10px; background:var(--bg-panel);
+  border:2px solid rgba(115,207,255,0.15);
+  text-align:center;
+}
+.social-item{color:var(--accent); font-weight:600; font-size:13px; opacity:0; transition:.5s}
+.social-item.show{opacity:1;}
+
+/* GAME FRAME (patokan lebar) */
+.game-frame{
+  position:absolute;
+  top:10%; left:50%; transform:translateX(-50%);
+  width:90%; height:50%;
   border:3px solid rgba(115,207,255,0.3);
   border-radius:16px;
   background:rgba(255,255,255,0.02);
   box-shadow:0 0 20px rgba(115,207,255,0.2);
 }
 
-/* Social rotator (lebar = game) */
-.topbar{
-  position:absolute; top:20px; left:50%;
-  transform:translateX(-50%);
-  width:88%; max-width:88%;
-  padding:6px 12px;
-  border-radius:10px;
-  background:var(--bg-panel);
-  border:2px solid rgba(115,207,255,0.15);
-  text-align:center;
-}
-.social-item{
-  color:var(--accent); font-weight:600;
-  font-size:13px; opacity:0; transition:all .5s ease;
-}
-.social-item.show{opacity:1;}
-
-/* Bottom panel (follower + map) */
+/* BOTTOM PANEL (follower + map) */
 .bottom-panel{
-  position:absolute; top:63%; left:50%;
-  transform:translateX(-50%);
-  width:88%; display:flex;
-  justify-content:space-between; align-items:center;
-  padding:6px 12px;
-  border-radius:12px;
-  background:var(--bg-panel);
+  position:absolute;
+  top:63%; left:50%; transform:translateX(-50%);
+  width:86%; padding:8px 14px;
+  display:flex; justify-content:space-between; align-items:center;
+  border-radius:12px; background:var(--bg-panel);
   border:2px solid rgba(115,207,255,0.25);
   box-shadow:0 0 15px rgba(115,207,255,0.15);
 }
-.follower-card{
-  position:relative; width:70px; height:70px;
-  display:grid; place-items:center;
-}
-.follower-card svg{width:70px;height:70px;transform:rotate(-90deg);}
+
+/* Follower circle */
+.follower-card{position:relative;width:70px;height:70px;display:grid;place-items:center}
+.follower-card svg{width:70px;height:70px;transform:rotate(-90deg)}
 .progress-bg{stroke:rgba(255,255,255,0.15);stroke-width:6}
 .progress-fg{stroke:var(--accent);stroke-width:6;stroke-linecap:round;stroke-dasharray:440;stroke-dashoffset:440}
-.follower-num{
-  position:absolute; font-size:10px; font-weight:700;
-  color:var(--text); text-shadow:0 0 6px var(--accent);
-  text-align:center; line-height:1.2;
-}
-.map-panel{flex:1; text-align:right;}
-.map-text{
-  font-size:13px; color:var(--text);
-  border-right:2px solid var(--accent);
-  padding-right:4px;
-}
+.follower-num{position:absolute;font-size:11px;font-weight:700;color:var(--text);text-shadow:0 0 6px var(--accent)}
 
-/* Music player (lebar = game) */
+/* Map info */
+.map-panel{flex:1;text-align:right;}
+.map-text{font-size:13px;color:var(--text);border-right:2px solid var(--accent);padding-right:4px}
+
+/* MUSIC PLAYER */
 .music-player{
-  position:absolute; bottom:20px; left:50%;
-  transform:translateX(-50%);
-  width:88%; padding:8px 12px;
-  border-radius:12px;
-  background:var(--bg-panel);
+  position:absolute;
+  bottom:80px; left:50%; transform:translateX(-50%);
+  width:86%; padding:8px 12px;
+  border-radius:12px; background:var(--bg-panel);
   border:2px solid rgba(115,207,255,0.2);
   display:flex; align-items:center; justify-content:space-between;
 }
@@ -103,7 +90,19 @@ html,body{
 .bar:nth-child(4){animation-delay:450ms}
 @keyframes bar{0%{height:4px}50%{height:16px}100%{height:6px}}
 
-/* Snow */
+/* NOTES PANEL */
+.notes{
+  position:absolute;
+  bottom:20px; left:50%; transform:translateX(-50%);
+  width:86%; padding:6px 12px;
+  border-radius:10px; background:var(--bg-panel);
+  border:2px solid rgba(115,207,255,0.25);
+  font-size:12px; color:var(--text);
+  text-align:center;
+  white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
+}
+
+/* SNOW */
 .snowflake{
   position:absolute;top:-20px;color:#fff;opacity:0.9;
   animation:fall linear forwards;pointer-events:none;
@@ -127,7 +126,7 @@ html,body{
         <circle class="progress-bg" cx="60" cy="60" r="50"/>
         <circle class="progress-fg" cx="60" cy="60" r="50"/>
       </svg>
-      <div id="follower-num" class="follower-num">320/500</div>
+      <div id="follower-num" class="follower-num">350/500</div>
     </div>
     <!-- Map -->
     <div class="map-panel"><span id="map-text" class="map-text"></span></div>
@@ -136,17 +135,20 @@ html,body{
   <!-- Music -->
   <div class="music-player">
     <div class="song-info">
-      <div class="song-title" id="song-title">— not playing —</div>
-      <div class="song-artist" id="song-artist"></div>
+      <div class="song-title" id="song-title">Arctic Drive</div>
+      <div class="song-artist" id="song-artist">Synthwave Factory</div>
     </div>
     <div class="equalizer">
       <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
     </div>
   </div>
+
+  <!-- Notes -->
+  <div class="notes" id="notes">Objective: Reach 500 followers & clear Ice Valley ❄</div>
 </div>
 
 <script>
-/* Snow */
+/* Snow effect */
 const wrap=document.getElementById("wrap");
 setInterval(()=>{
   const s=document.createElement("div");
@@ -166,7 +168,15 @@ const socials=[
   {icon:'<i class="fab fa-instagram"></i>',text:'@instagram'},
   {icon:'<i class="fab fa-discord"></i>',text:'@discord'}
 ];
-let si=0;function showSocial(){socialEl.classList.remove("show");setTimeout(()=>{socialEl.innerHTML=socials[si].icon+" "+socials[si].text;socialEl.classList.add("show");},200);si=(si+1)%socials.length;}
+let si=0;
+function showSocial(){
+  socialEl.classList.remove("show");
+  setTimeout(()=>{
+    socialEl.innerHTML=socials[si].icon+" "+socials[si].text;
+    socialEl.classList.add("show");
+  },200);
+  si=(si+1)%socials.length;
+}
 showSocial();setInterval(showSocial,3000);
 
 /* Map typing */
@@ -182,18 +192,11 @@ function typeMap(){
 }
 typeMap();
 
-/* Follower progress sample */
+/* Follower progress (sample 350/500) */
 const fg=document.querySelector(".progress-fg");
-const R=50,C=2*Math.PI*R;fg.style.strokeDasharray=C;
-let current=320,target=500;
-let pct=current/target;
-fg.style.strokeDashoffset=C-C*pct;
-
-/* Music demo */
-const st=document.getElementById("song-title"),sa=document.getElementById("song-artist");
-const tracks=[{t:"Arctic Drive",a:"Synthwave Factory"},{t:"Glacial Pulse",a:"Aurora9"},{t:"Night Ski",a:"Frostbyte"}];
-let ti=0;function nextTrack(){st.textContent=tracks[ti].t;sa.textContent=tracks[ti].a;ti=(ti+1)%tracks.length;}
-nextTrack();setInterval(nextTrack,8000);
+const R=50,C=2*Math.PI*R;
+fg.style.strokeDasharray=C;
+fg.style.strokeDashoffset=C-(350/500)*C;
 </script>
 </body>
 </html>
