--- a/overlay_penguin_portrait_futuristic.html
+++ b/overlay_penguin_portrait_futuristic.html
@@ -26,19 +26,19 @@ html,body{
   pointer-events:none;
 }
 
-/* SOCIAL (atas) */
+/* Social (atas) */
 .topbar{
   position:absolute; top:20px; left:50%;
   transform:translateX(-50%);
-  padding:6px 12px; min-width:180px; max-width:300px;
+  padding:6px 12px; min-width:160px; max-width:260px;
   border-radius:10px; background:var(--bg-panel);
   border:2px solid rgba(115,207,255,0.15);
   text-align:center;
 }
-.social-item{color:var(--accent); font-weight:600; font-size:13px; opacity:0; transition:.5s}
+.social-item{color:var(--accent); font-weight:600; font-size:12px; opacity:0; transition:.5s}
 .social-item.show{opacity:1;}
 
-/* GAME FRAME (patokan lebar) */
+/* Game screen */
 .game-frame{
   position:absolute;
   top:10%; left:50%; transform:translateX(-50%);
@@ -49,60 +49,62 @@ html,body{
   box-shadow:0 0 20px rgba(115,207,255,0.2);
 }
 
-/* BOTTOM PANEL (follower + map) */
-.bottom-panel{
+/* Bottom panels (follower & map) */
+.bottom-row{
   position:absolute;
   top:63%; left:50%; transform:translateX(-50%);
-  width:86%; padding:8px 14px;
-  display:flex; justify-content:space-between; align-items:center;
-  border-radius:12px; background:var(--bg-panel);
+  width:86%; display:flex; justify-content:space-between; gap:10px;
+}
+.panel-box{
+  flex:1; padding:8px; border-radius:12px;
+  background:var(--bg-panel);
   border:2px solid rgba(115,207,255,0.25);
-  box-shadow:0 0 15px rgba(115,207,255,0.15);
+  display:flex; justify-content:center; align-items:center;
+  box-shadow:0 0 12px rgba(115,207,255,0.15);
 }
 
 /* Follower circle */
-.follower-card{position:relative;width:70px;height:70px;display:grid;place-items:center}
-.follower-card svg{width:70px;height:70px;transform:rotate(-90deg)}
+.follower-card{position:relative;width:65px;height:65px;display:grid;place-items:center}
+.follower-card svg{width:65px;height:65px;transform:rotate(-90deg)}
 .progress-bg{stroke:rgba(255,255,255,0.15);stroke-width:6}
 .progress-fg{stroke:var(--accent);stroke-width:6;stroke-linecap:round;stroke-dasharray:440;stroke-dashoffset:440}
-.follower-num{position:absolute;font-size:11px;font-weight:700;color:var(--text);text-shadow:0 0 6px var(--accent)}
+.follower-num{position:absolute;font-size:10px;font-weight:700;color:var(--text);text-shadow:0 0 6px var(--accent)}
 
 /* Map info */
-.map-panel{flex:1;text-align:right;}
-.map-text{font-size:13px;color:var(--text);border-right:2px solid var(--accent);padding-right:4px}
+.map-text{font-size:12px;color:var(--text);border-right:2px solid var(--accent);padding-right:4px;white-space:nowrap;}
 
-/* MUSIC PLAYER */
+/* Music player */
 .music-player{
   position:absolute;
   bottom:80px; left:50%; transform:translateX(-50%);
-  width:86%; padding:8px 12px;
+  width:82%; padding:6px 10px;
   border-radius:12px; background:var(--bg-panel);
   border:2px solid rgba(115,207,255,0.2);
   display:flex; align-items:center; justify-content:space-between;
 }
 .song-info{flex:1;overflow:hidden}
-.song-title{font-size:13px;font-weight:700;color:var(--text);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.song-artist{font-size:11px;color:rgba(227,244,255,0.7)}
-.equalizer{display:flex;gap:3px;align-items:flex-end;height:20px}
-.bar{width:4px;background:var(--accent);border-radius:2px;animation:bar 800ms linear infinite}
+.song-title{font-size:12px;font-weight:700;color:var(--text);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+.song-artist{font-size:10px;color:rgba(227,244,255,0.7)}
+.equalizer{display:flex;gap:2px;align-items:flex-end;height:16px}
+.bar{width:3px;background:var(--accent);border-radius:2px;animation:bar 800ms linear infinite}
 .bar:nth-child(2){animation-delay:150ms}
 .bar:nth-child(3){animation-delay:300ms}
 .bar:nth-child(4){animation-delay:450ms}
-@keyframes bar{0%{height:4px}50%{height:16px}100%{height:6px}}
+@keyframes bar{0%{height:3px}50%{height:12px}100%{height:4px}}
 
-/* NOTES PANEL */
+/* Notes */
 .notes{
   position:absolute;
   bottom:20px; left:50%; transform:translateX(-50%);
-  width:86%; padding:6px 12px;
+  width:82%; padding:6px 10px;
   border-radius:10px; background:var(--bg-panel);
   border:2px solid rgba(115,207,255,0.25);
-  font-size:12px; color:var(--text);
+  font-size:11px; color:var(--text);
   text-align:center;
   white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
 }
 
-/* SNOW */
+/* Snow */
 .snowflake{
   position:absolute;top:-20px;color:#fff;opacity:0.9;
   animation:fall linear forwards;pointer-events:none;
@@ -118,18 +120,22 @@ html,body{
   <!-- Game -->
   <div class="game-frame"></div>
 
-  <!-- Bottom panel -->
-  <div class="bottom-panel">
-    <!-- Follower -->
-    <div class="follower-card">
-      <svg viewBox="0 0 120 120">
-        <circle class="progress-bg" cx="60" cy="60" r="50"/>
-        <circle class="progress-fg" cx="60" cy="60" r="50"/>
-      </svg>
-      <div id="follower-num" class="follower-num">350/500</div>
+  <!-- Bottom row (follower + map) -->
+  <div class="bottom-row">
+    <div class="panel-box">
+      <!-- Follower -->
+      <div class="follower-card">
+        <svg viewBox="0 0 120 120">
+          <circle class="progress-bg" cx="60" cy="60" r="50"/>
+          <circle class="progress-fg" cx="60" cy="60" r="50"/>
+        </svg>
+        <div id="follower-num" class="follower-num">350/500</div>
+      </div>
     </div>
-    <!-- Map -->
-    <div class="map-panel"><span id="map-text" class="map-text"></span></div>
+    <div class="panel-box">
+      <!-- Map -->
+      <span id="map-text" class="map-text"></span>
+    </div>
   </div>
 
   <!-- Music -->
@@ -148,7 +154,7 @@ html,body{
 </div>
 
 <script>
-/* Snow effect */
+/* Snow */
 const wrap=document.getElementById("wrap");
 setInterval(()=>{
   const s=document.createElement("div");
