--- a/overlay_penguin_portrait_futuristic.html
+++ b/overlay_penguin_portrait_futuristic.html
@@ -62,6 +62,14 @@ html,body{
   display:flex; justify-content:center; align-items:center;
   box-shadow:0 0 12px rgba(115,207,255,0.15);
 }
+.panel-content {
+  display:flex; flex-direction:column; align-items:center; gap:6px;
+}
+.panel-header {
+  font-size:10px; font-weight:700;
+  color:var(--accent); letter-spacing:1px;
+  text-shadow:0 0 6px rgba(115,207,255,0.8);
+}
 
 /* Follower circle */
 .follower-card{position:relative;width:65px;height:65px;display:grid;place-items:center}
@@ -123,18 +131,22 @@ html,body{
   <!-- Bottom row (follower + map) -->
   <div class="bottom-row">
     <div class="panel-box">
-      <!-- Follower -->
-      <div class="follower-card">
-        <svg viewBox="0 0 120 120">
-          <circle class="progress-bg" cx="60" cy="60" r="50"/>
-          <circle class="progress-fg" cx="60" cy="60" r="50"/>
-        </svg>
-        <div id="follower-num" class="follower-num">350/500</div>
+      <div class="panel-content">
+        <div class="panel-header">TARGET FOLLOWER</div>
+        <div class="follower-card">
+          <svg viewBox="0 0 120 120">
+            <circle class="progress-bg" cx="60" cy="60" r="50"/>
+            <circle class="progress-fg" cx="60" cy="60" r="50"/>
+          </svg>
+          <div id="follower-num" class="follower-num">350 / 500</div>
+        </div>
       </div>
     </div>
     <div class="panel-box">
-      <!-- Map -->
-      <span id="map-text" class="map-text"></span>
+      <div class="panel-content">
+        <div class="panel-header">MAP</div>
+        <span id="map-text" class="map-text"></span>
+      </div>
     </div>
   </div>
 
@@ -187,7 +199,7 @@ showSocial();setInterval(showSocial,3000);
 
 /* Map typing */
 const mapText=document.getElementById("map-text");
-const maps=["❄ Map: Ice Valley","❄ Map: Frostbite Ridge","❄ Map: Crystal Cavern"];
+const maps=["❄ Ice Valley","❄ Frostbite Ridge","❄ Crystal Cavern"];
 let mi=0,ci=0,typing=true;
 function typeMap(){
   const txt=maps[mi];
