--- a/overlay_penguin_portrait_futuristic.html
+++ b/overlay_penguin_portrait_futuristic.html
@@ -1,135 +1,172 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Portrait Overlay Snow Futuristic</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portrait Snow Overlay</title>
 <style>
-:root{
-  --accent:#73cfff;
-  --bg-panel: rgba(0,0,20,0.55);
-  --text:#eaf6ff;
-}
-html,body{
-  height:100%; margin:0;
-  background:transparent;
-  font-family:"Orbitron", sans-serif;
-}
-.wrap{
-  width:100%; height:100%;
-  aspect-ratio:9/16;
-  max-width:360px; margin:auto;
-  position:relative;
-  background:transparent;
-  overflow:hidden;
-  pointer-events:none;
+:root {
+  --bg-panel: rgba(15, 20, 35, 0.65);
+  --accent: #73cfff;
+  --text: #fff;
 }
 
-/* Social (atas) */
-.topbar{
-  position:absolute; top:20px; left:50%;
-  transform:translateX(-50%);
-  padding:6px 12px; min-width:160px; max-width:260px;
-  border-radius:10px; background:var(--bg-panel);
-  border:2px solid rgba(115,207,255,0.15);
-  text-align:center;
-}
-.social-item{color:var(--accent); font-weight:600; font-size:12px; opacity:0; transition:.5s}
-.social-item.show{opacity:1;}
-
-/* Game screen */
-.game-frame{
-  position:absolute;
-  top:10%; left:50%; transform:translateX(-50%);
-  width:90%; height:50%;
-  border:3px solid rgba(115,207,255,0.3);
-  border-radius:16px;
-  background:rgba(255,255,255,0.02);
-  box-shadow:0 0 20px rgba(115,207,255,0.2);
+/* Reset */
+html, body {
+  margin: 0;
+  height: 100%;
+  background: transparent;
+  font-family: 'Segoe UI', sans-serif;
+  color: var(--text);
 }
 
-/* Bottom panels (follower & map) */
-.bottom-row{
-  position:absolute;
-  top:63%; left:50%; transform:translateX(-50%);
-  width:86%; display:flex; justify-content:space-between; gap:10px;
+.wrap {
+  width: 100%;
+  height: 100%;
+  max-width: 360px;
+  aspect-ratio: 9/16;
+  margin: auto;
+  position: relative;
+  background: transparent;
+  overflow: hidden;
 }
-.panel-box{
-  flex:1; padding:8px; border-radius:12px;
-  background:var(--bg-panel);
-  border:2px solid rgba(115,207,255,0.25);
-  display:flex; justify-content:center; align-items:center;
-  box-shadow:0 0 12px rgba(115,207,255,0.15);
+
+/* Game Screen */
+.game-screen {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 90%;
+  aspect-ratio: 9/16;
+  background: rgba(255,255,255,0.05);
+  border: 2px solid rgba(115,207,255,0.3);
+  border-radius: 16px;
+  box-shadow: 0 0 18px rgba(115,207,255,0.25);
 }
+
+/* Bottom row for follower + map */
+.bottom-row {
+  position: absolute;
+  top: 65%; /* dinaikkan biar ga numpuk musik */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 86%;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.panel-box {
+  flex: 1;
+  min-height: 100px;
+  padding: 8px;
+  border-radius: 12px;
+  background: var(--bg-panel);
+  border: 2px solid rgba(115,207,255,0.25);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  box-shadow: 0 0 12px rgba(115,207,255,0.15);
+}
+
 .panel-content {
-  display:flex; flex-direction:column; align-items:center; gap:6px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6px;
+  width: 100%;
+  height: 100%;
 }
+
 .panel-header {
-  font-size:10px; font-weight:700;
-  color:var(--accent); letter-spacing:1px;
-  text-shadow:0 0 6px rgba(115,207,255,0.8);
+  font-size: 10px;
+  font-weight: 700;
+  color: var(--accent);
+  letter-spacing: 1px;
+  text-shadow: 0 0 6px rgba(115,207,255,0.8);
+  margin-bottom: 4px;
 }
 
-/* Follower circle */
-.follower-card{position:relative;width:65px;height:65px;display:grid;place-items:center}
-.follower-card svg{width:65px;height:65px;transform:rotate(-90deg)}
-.progress-bg{stroke:rgba(255,255,255,0.15);stroke-width:6}
-.progress-fg{stroke:var(--accent);stroke-width:6;stroke-linecap:round;stroke-dasharray:440;stroke-dashoffset:440}
-.follower-num{position:absolute;font-size:10px;font-weight:700;color:var(--text);text-shadow:0 0 6px var(--accent)}
-
-/* Map info */
-.map-text{font-size:12px;color:var(--text);border-right:2px solid var(--accent);padding-right:4px;white-space:nowrap;}
-
-/* Music player */
-.music-player{
-  position:absolute;
-  bottom:80px; left:50%; transform:translateX(-50%);
-  width:82%; padding:6px 10px;
-  border-radius:12px; background:var(--bg-panel);
-  border:2px solid rgba(115,207,255,0.2);
-  display:flex; align-items:center; justify-content:space-between;
-}
-.song-info{flex:1;overflow:hidden}
-.song-title{font-size:12px;font-weight:700;color:var(--text);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.song-artist{font-size:10px;color:rgba(227,244,255,0.7)}
-.equalizer{display:flex;gap:2px;align-items:flex-end;height:16px}
-.bar{width:3px;background:var(--accent);border-radius:2px;animation:bar 800ms linear infinite}
-.bar:nth-child(2){animation-delay:150ms}
-.bar:nth-child(3){animation-delay:300ms}
-.bar:nth-child(4){animation-delay:450ms}
-@keyframes bar{0%{height:3px}50%{height:12px}100%{height:4px}}
-
-/* Notes */
-.notes{
-  position:absolute;
-  bottom:20px; left:50%; transform:translateX(-50%);
-  width:82%; padding:6px 10px;
-  border-radius:10px; background:var(--bg-panel);
-  border:2px solid rgba(115,207,255,0.25);
-  font-size:11px; color:var(--text);
-  text-align:center;
-  white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
+/* Follower Progress */
+.follower-card {
+  position: relative;
+  width: 90px;
+  height: 90px;
 }
 
-/* Snow */
-.snowflake{
-  position:absolute;top:-20px;color:#fff;opacity:0.9;
-  animation:fall linear forwards;pointer-events:none;
+.follower-card svg {
+  width: 100%;
+  height: 100%;
+  transform: rotate(-90deg);
 }
-@keyframes fall{0%{transform:translateY(-10px)}100%{transform:translateY(650px)}}
+
+.progress-bg {
+  fill: none;
+  stroke: rgba(255,255,255,0.15);
+  stroke-width: 10;
+}
+
+.progress-fg {
+  fill: none;
+  stroke: var(--accent);
+  stroke-width: 10;
+  stroke-linecap: round;
+  stroke-dasharray: 314; /* 2πr, r=50 */
+  stroke-dashoffset: 80; /* sample */
+  transition: stroke-dashoffset 1s;
+  filter: drop-shadow(0 0 6px var(--accent));
+}
+
+.follower-num {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 12px;
+  font-weight: 600;
+  text-align: center;
+}
+
+/* Map typing text */
+.map-text {
+  font-size: 12px;
+  color: var(--text);
+  text-align: center;
+  white-space: normal;
+  word-break: break-word;
+  overflow: hidden;
+  max-height: 40px;
+}
+
+/* Music Player */
+.music-player {
+  position: absolute;
+  bottom: 3%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75%;
+  padding: 6px 10px;
+  background: var(--bg-panel);
+  border-radius: 12px;
+  border: 2px solid rgba(115,207,255,0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 11px;
+  color: var(--text);
+  box-shadow: 0 0 12px rgba(115,207,255,0.15);
+}
 </style>
 </head>
 <body>
-<div class="wrap" id="wrap">
-  <!-- Social -->
-  <div class="topbar"><div class="social-item" id="social-item"></div></div>
+<div class="wrap">
+  <!-- Game Screen -->
+  <div class="game-screen"></div>
 
-  <!-- Game -->
-  <div class="game-frame"></div>
-
-  <!-- Bottom row (follower + map) -->
+  <!-- Bottom Row -->
   <div class="bottom-row">
+    <!-- Follower Panel -->
     <div class="panel-box">
       <div class="panel-content">
         <div class="panel-header">TARGET FOLLOWER</div>
@@ -142,6 +179,8 @@ html,body{
         </div>
       </div>
     </div>
+
+    <!-- Map Panel -->
     <div class="panel-box">
       <div class="panel-content">
         <div class="panel-header">MAP</div>
@@ -150,71 +189,35 @@ html,body{
     </div>
   </div>
 
-  <!-- Music -->
-  <div class="music-player">
-    <div class="song-info">
-      <div class="song-title" id="song-title">Arctic Drive</div>
-      <div class="song-artist" id="song-artist">Synthwave Factory</div>
-    </div>
-    <div class="equalizer">
-      <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
-    </div>
-  </div>
-
-  <!-- Notes -->
-  <div class="notes" id="notes">Objective: Reach 500 followers & clear Ice Valley ❄</div>
+  <!-- Music Player -->
+  <div class="music-player">🎵 Music Title - Artist</div>
 </div>
 
 <script>
-/* Snow */
-const wrap=document.getElementById("wrap");
-setInterval(()=>{
-  const s=document.createElement("div");
-  s.className="snowflake";s.textContent=Math.random()>0.5?"❄":"✦";
-  s.style.left=Math.random()*wrap.clientWidth+"px";
-  s.style.fontSize=(8+Math.random()*10)+"px";
-  const d=5+Math.random()*4;s.style.animationDuration=d+"s";
-  wrap.appendChild(s);setTimeout(()=>s.remove(),d*1000);
-},600);
+// Typing animation for map name
+const mapText = document.getElementById("map-text");
+const maps = ["Snow Valley", "Crystal Ice Cavern", "Frozen Tundra Expedition"];
+let idx = 0;
 
-/* Social rotator */
-const socialEl=document.getElementById("social-item");
-const socials=[
-  {icon:'<i class="fas fa-gamepad"></i>',text:'RobloxUser'},
-  {icon:'<i class="fab fa-tiktok"></i>',text:'@tiktok'},
-  {icon:'<i class="fab fa-youtube"></i>',text:'@youtube'},
-  {icon:'<i class="fab fa-instagram"></i>',text:'@instagram'},
-  {icon:'<i class="fab fa-discord"></i>',text:'@discord'}
-];
-let si=0;
-function showSocial(){
-  socialEl.classList.remove("show");
-  setTimeout(()=>{
-    socialEl.innerHTML=socials[si].icon+" "+socials[si].text;
-    socialEl.classList.add("show");
-  },200);
-  si=(si+1)%socials.length;
+function typeMap(text) {
+  mapText.textContent = "";
+  let i = 0;
+  let interval = setInterval(() => {
+    if (i < text.length) {
+      mapText.textContent += text[i];
+      i++;
+    } else {
+      clearInterval(interval);
+    }
+  }, 100);
 }
-showSocial();setInterval(showSocial,3000);
 
-/* Map typing */
-const mapText=document.getElementById("map-text");
-const maps=["❄ Ice Valley","❄ Frostbite Ridge","❄ Crystal Cavern"];
-let mi=0,ci=0,typing=true;
-function typeMap(){
-  const txt=maps[mi];
-  if(typing){
-    if(ci<txt.length){mapText.textContent=txt.slice(0,ci+1);ci++;setTimeout(typeMap,80);}else{typing=false;setTimeout(typeMap,15000);}}
-  else{
-    if(ci>0){mapText.textContent=txt.slice(0,ci-1);ci--;setTimeout(typeMap,40);}else{typing=true;mi=(mi+1)%maps.length;setTimeout(typeMap,500);}}
+function cycleMaps() {
+  typeMap(maps[idx]);
+  idx = (idx + 1) % maps.length;
 }
-typeMap();
-
-/* Follower progress (sample 350/500) */
-const fg=document.querySelector(".progress-fg");
-const R=50,C=2*Math.PI*R;
-fg.style.strokeDasharray=C;
-fg.style.strokeDashoffset=C-(350/500)*C;
+cycleMaps();
+setInterval(cycleMaps, 15000);
 </script>
 </body>
 </html>
